[package]
name = "PROJECT5"
version = "0.1.0"
authors = ["Nelson Chan <chakflying@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.3"
clap = "*"
unix_socket = { git = "https://github.com/dkl/unix-socket", branch = "seqpacket" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cute = "0.3.0"
rand = "*"
